--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       - add_ssh_keys
       - checkout
       - run:
+          name: Install dependencies
+          command: pip install -r development.txt
+      - run:
           name: Run tests
           command: python -m django test --settings=eb_sqs.test_settings
   test-python-2:
@@ -21,6 +24,9 @@ jobs:
     steps:
       - add_ssh_keys
       - checkout
+      - run:
+          name: Install dependencies
+          command: pip install -r development.txt
       - run:
           name: Run tests
           command: python -m django test --settings=eb_sqs.test_settings
