--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,9 @@ workflows:
      jobs:
        - test-python-3
        - test-python-2
+       - test-python-3-6
 jobs:
-  test-python-3:
+  test-python-3: &test-template
     docker:
       - image: circleci/python:3.5-jessie
     steps:
@@ -14,29 +15,27 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: sudo pip install -r development.txt
+          command: |
+            sudo pip install -r development.txt
       - run:
           name: Run tests
-          command: python -m django test --settings=eb_sqs.test_settings
+          command: |
+            python -m django test --settings=eb_sqs.test_settings
   test-python-2:
     docker:
       - image: circleci/python:2.7-jessie
     steps:
       - add_ssh_keys
       - checkout
-      - restore_cache:
-            key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: Install dependencies
           command: |
-            sudo pip install pipenv
-            pipenv install -r development.txt
-      - save_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-          paths:
-            - "/usr/local/bin"
-            - "/usr/local/lib/python2.7/site-packages"
+            sudo pip install -r development.txt
       - run:
           name: Run tests
           command: |
-            pipenv run python -m django test --settings=eb_sqs.test_settings
+            python -m django test --settings=eb_sqs.test_settings
+  test-python-3-6:
+    <<: *test-template
+    docker:
+      - image: circleci/python:3.6-jessie
