--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,10 @@ workflows:
    version: 2
    eb-sqs-jobs:
      jobs:
-       - test-python-3
-       - test-python-2
-       - test-python-3-6
+       - test-python-3-5
+       - test-python-2-7
 jobs:
-  test-python-3: &test-template
+  test-python-3-5: &test-template
     docker:
       - image: circleci/python:3.5-jessie
     steps:
@@ -21,21 +20,7 @@ jobs:
           name: Run tests
           command: |
             python -m django test --settings=eb_sqs.test_settings
-  test-python-2:
-    docker:
-      - image: circleci/python:2.7-jessie
-    steps:
-      - add_ssh_keys
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            sudo pip install -r development.txt
-      - run:
-          name: Run tests
-          command: |
-            python -m django test --settings=eb_sqs.test_settings
-  test-python-3-6:
+  test-python-2-7:
     <<: *test-template
     docker:
-      - image: circleci/python:3.6-jessie
+      - image: circleci/python:2.7-jessie
