BNCASB-2204: Update python image versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,12 @@ workflows:
    version: 2
    eb-sqs-jobs:
      jobs:
-       - test-python-3-5
+       - test-python-3-7
        - test-python-2-7
 jobs:
-  test-python-3-5: &test-template
+  test-python-3-7: &test-template
     docker:
-      - image: circleci/python:3.5-jessie
+      - image: circleci/python:3.7.6
     steps:
       - add_ssh_keys
       - checkout
@@ -23,4 +23,4 @@ jobs:
   test-python-2-7:
     <<: *test-template
     docker:
-      - image: circleci/python:2.7-jessie
+      - image: circleci/python:2.7.16
