--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,19 @@
 version: 2.1
-workflows:
-   version: 2
-   eb-sqs-jobs:
-     jobs:
-       - test-python-3-7
-       - test-python-2-7
-jobs:
-  test-python-3-7: &test-template
+
+executors:
+  python2:
+    docker:
+      - image: circleci/python:2.7.16
+  python3:
     docker:
       - image: circleci/python:3.7.6
+
+jobs:
+  test:
+    parameters:
+      exec:
+        type: executor
+      executor: << parameters.exec >>
     steps:
       - add_ssh_keys
       - checkout
@@ -20,7 +25,12 @@ jobs:
           name: Run tests
           command: |
             python -m django test --settings=eb_sqs.test_settings
-  test-python-2-7:
-    <<: *test-template
-    docker:
-      - image: circleci/python:2.7.16
+
+workflows:
+  version: 2
+  eb-sqs-jobs:
+    jobs:
+      - test:
+          exec: python2
+      - test:
+          exec: python3
