Try putting python 2.7 circleci test back

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,11 @@ workflows:
    eb-sqs-jobs:
      jobs:
        - test-python-3-7
+       - test-python-2-7
 jobs:
   test-python-3-7: &test-template
     docker:
-      - image: cimg/python:3.7
+      - image: circleci/python:3.7.6
     steps:
       - add_ssh_keys
       - checkout
@@ -19,4 +20,7 @@ jobs:
           name: Run tests
           command: |
             python -m django test --settings=eb_sqs.test_settings
-
+  test-python-2-7:
+    <<: *test-template
+    docker:
+      - image: circleci/python:2.7.16
