--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ workflows:
      jobs:
        - test-python-3-9
 jobs:
-  test-python-3-9: &test-template
+  test-python-3-9:
     docker:
       - image: cimg/python:3.9.16
     steps:
