--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,24 +3,22 @@ workflows:
    version: 2
    eb-sqs-jobs:
      jobs:
-       - test-python-3-7
-       - test-python-2-7
+       - test-python-3-9
 jobs:
-  test-python-3-7: &test-template
+  test-python-3-9:
     docker:
-      - image: circleci/python:3.7.6
+      - image: cimg/python:3.9.16
     steps:
       - add_ssh_keys
       - checkout
       - run:
-          name: Install dependencies
+          name: Install pip packages
           command: |
-            sudo pip install -r development.txt
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r development.txt
       - run:
           name: Run tests
           command: |
+            . venv/bin/activate
             python -m django test --settings=eb_sqs.test_settings
-  test-python-2-7:
-    <<: *test-template
-    docker:
-      - image: circleci/python:2.7.16
